--- a/index.html
+++ b/index.html
@@ -17,19 +17,10 @@
     <!-- Website Css -->
     <link rel="stylesheet" href="style.css">
 
-	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
-	
+
 	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
 	<link rel="stylesheet" type="text/css" href="engine0/style.css" />
 	<script type="text/javascript" src="engine0/jquery.js"></script>
-	<!-- End WOWSlider.com HEAD section -->
-	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
-	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
-	<!--script type="text/javascript" src="engine1/jquery.js"></script-->
-	<!-- End WOWSlider.com HEAD section -->
-	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
-	<link rel="stylesheet" type="text/css" href="engine0/style.css" />
-	<!--script type="text/javascript" src="engine0/jquery.js"></script-->
 	<!-- End WOWSlider.com HEAD section --></head>
 <body>
 	<header>
@@ -68,7 +59,7 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About us</a>
+          <a class="nav-link" href="#">CONSULTANTS</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Services</a>
@@ -78,8 +69,8 @@
             Other
           </a>
           <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">About us</a></li>
             <li><a class="dropdown-item" href="#">Our team</a></li>
-            <li><a class="dropdown-item" href="#">Our Doctors</a></li>
             <li><a class="dropdown-item" href="#">Faq</a></li>
             <li><a class="dropdown-item" href="#">Price Table</a></li>
           </ul>
@@ -100,30 +91,35 @@
 	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 	<div id="wowslider-container0">
 	<div class="ws_images"><ul>
-		<li><img src="data0/images/slider_1.jpg" alt="Slider_1" title="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER" id="wows0_0"/>We'll Ensure You <br> <u>Always Get</u> The Best <br> Result.</li>
-		<li><img src="data0/images/slider_2.jpg" alt="slideshow javascript" title="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER" id="wows0_1"/>We'll Ensure You <br> <u>Always Get</u> The Best <br> Result.</li>
-		<li><img src="data0/images/slider_3.jpg" alt="Slider_3" title="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER" id="wows0_2"/>We'll Ensure You <br> <u>Always Get</u> The Best <br> Result.</li>
+		<li><img src="data0/images/slider_1.jpg" alt="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER" title="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER" id="wows0_0"/>
+      We'll Ensure You <br>
+    <u>Always Get</u> The Best <br>
+    Result.</li>
+		<li><img src="data0/images/slider_2.jpg" alt="slider html" title="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER" id="wows0_1"/>
+      Your Good Health <br> is Our Responsibility</li>
+		<li><img src="data0/images/slider_3.jpg" alt="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER" title="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER" id="wows0_2"/>We'll Ensure You <br>
+<u>Always Get</u> The Best <br>
+Result.</li>
 	</ul></div>
-	<div class="ws_bullets">
-    <div>
-		<a href="index.html" title="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER "><span><img src="data0/tooltips/slider_1.jpg" alt="Slider_1"/>1</span></a>
-		<a href="index.html" title="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER "><span><img src="data0/tooltips/slider_2.jpg" alt="Slider_2"/>2</span></a>
-		<a href="index.html" title="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER "><span><img src="data0/tooltips/slider_3.jpg" alt="Slider_3"/>3</span></a>
-	</div>
-</div>
+	<div class="ws_bullets"><div>
+		<a href="#" title="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER"><span><img src="data0/tooltips/slider_1.jpg" alt="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER"/>1</span></a>
+		<a href="#" title="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER"><span><img src="data0/tooltips/slider_2.jpg" alt="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER"/>2</span></a>
+		<a href="#" title="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER"><span><img src="data0/tooltips/slider_3.jpg" alt="WELCOME TO DHDAKA DIGITAL DIAGNOSTIC CENTER"/>3</span></a>
+	</div></div>
 	<div class="ws_shadow"></div>
 	</div>	
-	<script type="text/javascript" src="engine0/wowslider.js"></script>
-	<script type="text/javascript" src="engine0/script.js"></script>
-	<!-- End WOWSlider.com BODY section -->
+</div>
+
 	
+	<!-- End WOWSlider.com BODY section -->
 	
 	</div>
 </section>
 	
 
 
-
+<script type="text/javascript" src="engine0/wowslider.js"></script>
+  <script type="text/javascript" src="engine0/script.js"></script>
 	<script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/all.min.js"></script>
 </body>
